--- a/goobi-plugin-import-excel/build.xml
+++ b/goobi-plugin-import-excel/build.xml
@@ -2,12 +2,12 @@
 
 <!-- ADJUST PROJECT NAME, FILENAME AND INCLUDED CLASSES FOR JENKINS IF YOU COPY THIS FILE TO A NEW PROJECT-->
 
-<project name="Goobi Import Plugin" basedir="." default="deploy">
+<project name="Goobi Import Plugin - Generic Excel" basedir="." default="deploy">
 
 	<!-- ================================= 
 	        properties             
 	     ================================= -->
-	<property name="filename" value="plugin_intranda_import_excel" />
+	<property name="filename" value="plugin_intranda_import_generic_excel" />
 	<property name="dir.build" value="bin" />
 	<property name="dir.src" value="src" />
 	<property name="dir.test" value="test/src" />
