--- a/goobi-plugin-import-excel/build.xml
+++ b/goobi-plugin-import-excel/build.xml
@@ -1,9 +1,7 @@
-<?xml version="1.0"?>
-
-<project name="goobi-plugin-step-mixedocr">
+<project name="goobi-plugin-import-excel" default="devbuild">
 	<target name="devbuild">
 		<exec executable="mvn">
-			<arg value="package" />
+			<arg value="package"/>
 		</exec>
 		<copy file="target/plugin_intranda_import_generic_excel.jar" todir="/opt/digiverso/goobi/plugins/import/"/>
 	</target>
