--- a/module-base/pom.xml
+++ b/module-base/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>io.goobi.workflow.plugin</groupId>
     <artifactId>plugin-import-excel</artifactId>
-    <version>24.06</version>
+    <version>24.07-SNAPSHOT</version>
   </parent>
   <artifactId>plugin-import-excel-base</artifactId>
   <packaging>jar</packaging>
